--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,103 @@
 
+@Book{		  francis2021gradient,
+  author	= {Francis, Elaine J.},
+  pages		= {289},
+  publisher	= {Oxford University Press},
+  title		= {Gradient Acceptability and Linguistic Theory},
+  year		= {2021}
+}
+
+@Article{	  brucart2019,
+  author	= {Brucart, Josep M.},
+  journal	= {GLOSEMA. Revista Asturiana de Lling{\"u}{\'i}stica},
+  title		= {Los l{\'i}mites de la subordinaci{\'o}n},
+  volume	= {1},
+  year		= {2019}
+}
+
+@InBook{	  brucart2016a,
+  address	= {Berlin, Boston},
+  author	= {Brucart, Josep M. and Gallego, {\'A}ngel J.},
+  booktitle	= {Las relaciones interoracionales en espa{\~n}ol,
+		  Categor{\'i}as sint{\'a}cticas y subordinaci{\'o}n adverbial},
+  editor	= {Pav{\'o}n Lucero, Mar{\'i}a Victoria},
+  pages		= {161-200},
+  publisher	= {De Gruyter Mouton},
+  title		= {Aspectos formales e interpretativos de la
+		  subordinaci{\'o}n adverbial},
+  year		= {2016}
+}
+
+@Book{		  camacho2012coordination,
+  author	= {Camacho, Jos{\'e}},
+  pages		= {187},
+  publisher	= {Springer Science \& Business Media},
+  title		= {The Structure of Coordination: Conjunction and Agreement
+		  Phenomena in Spanish and Other Languages},
+  year		= {2012}
+}
+
+@Book{		  hetterle2015adverbial,
+  address	= {Berlin},
+  author	= {Hetterle, Katja},
+  publisher	= {Walter de Gruyter},
+  title		= {Adverbial Clauses in Cross-Linguistic Perspective},
+  year		= {2015}
+}
+
+@Book{		  kortmann1997adverbial,
+  address	= {Berlin; New Yorj},
+  author	= {Kortmann, Bernd},
+  publisher	= {Mouton de Gruyter},
+  title		= {Adverbial Subordination. A Typology and History of
+		  Adverbial Subordinators Based on European Languages},
+  year		= {1997}
+}
+
+@Book{		  kiss2009adverbs,
+  address	= {Berlin; New York},
+  editor	= {Kiss, Katalin {\'E}.},
+  publisher	= {Walter de Gruyter},
+  title		= {Adverbs and Adverbial Adjuncts at the Interfaces},
+  year		= {2009}
+}
+
+@Book{		  lenker2010adverbial,
+  address	= {Berlin; New York},
+  author	= {Lenker, Ursula},
+  publisher	= {Walter de Gruyter},
+  title		= {Argument and Rhetoric Adverbial Connectors in the History
+		  of English},
+  year		= {2010}
+}
+
+@Book{		  schafer2013adverbial,
+  address	= {Berlin; New York},
+  author	= {Sch{\"a}fer, Martin},
+  publisher	= {Walter de Gruyter},
+  title		= {Positions and Interpretations German Adverbial Adjectives
+		  at the Syntax-Semantics Interface},
+  year		= {2013}
+}
+
+@Article{	  ke2023agree,
+  author	= {Ke, Alan Hezao},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Search downward: Minimal Search-based Agree},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Article{	  bhatia2023copular,
+  author	= {Bhatia, Sakshi and Bhatt, Rajesh},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Copular Agreement in Hindi-Urdu},
+  volume	= {8},
+  year		= {2023}
+}
+
 @Article{	  mchugh2023cause,
   author	= {McHugh, Dean Michael},
   journal	= {Glossa: a journal of general linguistics},
