--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Unpublished{	  murphy2023rose,
+  author	= {Murphy, Elliot},
+  title		= {ROSE: A Neurocomputational Architecture for Syntax},
+  year		= {2023}
+}
+
 @Book{		  francis2021gradient,
   author	= {Francis, Elaine J.},
   pages		= {289},
