--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  jeretic2023modals,
+  author	= {Jereti{\v c}, Paloma and Thoms, Gary},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {Modals, negation and movement: a reassessment},
+  year		= {2023}
+}
+
 @Unpublished{	  murphy2023rose,
   author	= {Murphy, Elliot},
   title		= {ROSE: A Neurocomputational Architecture for Syntax},
