--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  vanalem2023closest,
+  author	= {van Alem, Astrid},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {First conjunct complementiser agreement and the structure
+		  of coordination},
+  volume	= {8},
+  year		= {2023}
+}
+
 @Article{	  jeretic2023modals,
   author	= {Jereti{\v c}, Paloma and Thoms, Gary},
   journal	= {Glossa: a journal of general linguistics},
