--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  fabregas2023complejas,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Biblioteca de Babel: revista de filolog{\'i}a
+		  hisp{\'a}nica},
+  pages		= {9--37},
+  title		= {Por qu{\'e} vienen palabras (complejas) en los
+		  diccionarios},
+  volume	= {4},
+  year		= {2023}
+}
+
+@Article{	  dunn2023evolution,
+  author	= {Dunn, Michael and Bellamy, Kate},
+  journal	= {Transactions of the Philological Society},
+  title		= {Evolution and Spread of Politeness Systems in
+		  Indo‐European},
+  year		= {2023}
+}
+
+@Article{	  adjemian1976nature,
+  author	= {Adjemian, Christian},
+  journal	= {Language Learning},
+  number	= {2},
+  pages		= {297--320},
+  title		= {On The Nature Of Interlanguage Systems},
+  volume	= {26},
+  year		= {1976}
+}
+
 @Article{	  vanalem2023closest,
   author	= {van Alem, Astrid},
   journal	= {Glossa: a journal of general linguistics},
