--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  zobel2023ich,
+  author	= {Zobel, Sarah},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {378--394},
+  title		= {The Impersonal Use of German 1st Person Singular Ich},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  debelder2014conflation,
+  author	= {De Belder, Marijke},
+  journal	= {Theoretical Linguistics},
+  number	= {3-4},
+  title		= {Against conflation},
+  volume	= {40},
+  year		= {2014}
+}
+
+@Article{	  vancraenenbroeck2014roots,
+  author	= {van Craenenbroeck, Jeroen},
+  journal	= {Theoretical Linguistics},
+  number	= {3-4},
+  title		= {On diagnosing complement-taking roots},
+  volume	= {40},
+  year		= {2014}
+}
+
+@Article{	  salzmann2023experiencer,
+  author	= {Salzmann, Martin},
+  journal	= {Syntax},
+  title		= {Experiencer intervention in English tough movement:
+		  Evidence from extraction of the tough adjective against
+		  syntactic‐ and semantic‐intervention accounts},
+  year		= {2023}
+}
+
 @Article{	  fabregas2023complejas,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Biblioteca de Babel: revista de filolog{\'i}a
