--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@InBook{	  ausin2000parecer,
+  address	= {Somerville, Mass.},
+  author	= {Aus{\'i}n, Adolfo and Depiante, Marcela},
+  booktitle	= {Hispanic Linguistics at the Turn of the Millennium},
+  editor	= {Campos, H{\'e}ctor},
+  pages		= {150-177},
+  publisher	= {Cascadilla},
+  title		= {On the syntax of parecer with and without experiencer},
+  year		= {2000}
+}
+
+@InBook{	  cuervo2003control,
+  address	= {Amsterdam},
+  author	= {Cuervo, Mar{\'i}a Cristina},
+  booktitle	= {Romance Linguistics: Theory and Acquisition: Selected
+		  Papers from the 32nd Linguistic Symposium on Romance
+		  Languages},
+  editor	= {P{\'e}rez-Lerroux, Ana Teresa and Roberge, Yves},
+  pages		= {111-130},
+  publisher	= {John Benjamins B. V.},
+  title		= {A Control-Raising Theory of Dative Experiencers},
+  year		= {2003}
+}
+
+@Article{	  harris2005plural,
+  author	= {Harris, James and Halle, Morris},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {195--222},
+  title		= {Unexpected Plural Inflections in Spanish: Reduplication
+		  and Metathesis},
+  volume	= {36},
+  year		= {2005}
+}
+
 @Article{	  zobel2023ich,
   author	= {Zobel, Sarah},
   journal	= {Linguistic Inquiry},
