--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,76 @@
 
+@Article{	  yuan2023case,
+  author	= {Yuan, Michelle},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {413--428},
+  title		= {Case as an Anaphor Agreement Effect: Evidence from
+		  Inuktitut},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  yang2023rapa,
+  author	= {Yang, Yifan},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {395--412},
+  title		= {Rapa Nui: A Case for Correspondence in Reduplication},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  pietraszko2023cycli,
+  author	= {Pietraszko, Asia},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {350--377},
+  title		= {Cyclic Selection: Auxiliaries Are Merged, Not Inserted},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  patejuk2023categ,
+  author	= {Patejuk, Agnieszka and Przepi{\'o}rkowski, Adam},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {326--349},
+  title		= {Category Mismatches in Coordination Vindicated},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  mendes2023salva,
+  author	= {Mendes, Gesoel and Kandybowicz, Jason},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {299--325},
+  title		= {Salvation by Deletion in Nupe},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  schlenker2023suppl,
+  author	= {Schlenker, Philippe},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {251--297},
+  title		= {Supplements without Bidimensionalism},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  prickett2023proba,
+  author	= {Prickett, Brandon},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {219--249},
+  title		= {Probabilistic Feature Attention as an Alternative to
+		  Variables in Phonotactic Learning},
+  volume	= {54},
+  year		= {2023}
+}
+
 @InBook{	  ausin2000parecer,
   address	= {Somerville, Mass.},
   author	= {Aus{\'i}n, Adolfo and Depiante, Marcela},
