--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  fernandez2020dativ,
+  author	= {Fern{\'a}ndez, Beatriz and Z{\'u}{\~n}iga, Fernando and
+		  Berro, Ane},
+  journal	= {Folia Linguistica},
+  number	= {3},
+  pages		= {647--696},
+  title		= {Datives with psych nouns and adjectives in Basque},
+  volume	= {54},
+  year		= {2020}
+}
+
+@Article{	  fabregas2015deriv,
+  author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael},
+  journal	= {The Linguistic Review},
+  number	= {2},
+  title		= {Deriving individual-level and stage-level psych verbs in
+		  Spanish},
+  volume	= {32},
+  year		= {2015}
+}
+
 @Article{	  yuan2023case,
   author	= {Yuan, Michelle},
   journal	= {Linguistic Inquiry},
