--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,86 @@
 
+@PhDThesis{	  stockwell2020ellipsis,
+  author	= {Stockwell, Richard},
+  school	= {UCLA},
+  title		= {ontrast and Verb Phrase Ellipsis: Triviality, Symmetry,
+		  and Competition},
+  year		= {2020}
+}
+
+@Article{	  vicente2023lingu,
+  author	= {Vicente, Agust{\'i}n and Barbarroja, Nat{\`a}lia and
+		  Castroviejo, Elena},
+  journal	= {Clinical Linguistics and Phonetics},
+  pages		= {1--17},
+  title		= {Linguistic, concept and symbolic composition in adults
+		  with minimal receptive vocabulary},
+  year		= {2023}
+}
+
+@Article{	  schaeffer2023langu,
+  author	= {Schaeffer, J and Abd El-Raziq, M and Castroviejo, E and
+		  Durrleman, S and Ferr{\'e}, S and Grama, I and Hendriks, P
+		  and Kissine, M and Manenti, M and Marinis, T and Meir, N
+		  and Novogrodsky, R and Perovic, A and Panzeri, F and
+		  Silleresi, S and Sukenik, N and Vicente, A and Zebib, R and
+		  Pr{\'e}vost, P and Tuller, L},
+  journal	= {J Neural Transm},
+  number	= {3},
+  pages		= {433--457},
+  title		= {Language in autism: domains, profiles and co-occurring
+		  conditions.},
+  volume	= {130},
+  year		= {2023}
+}
+
+@Unpublished{	  dendikken1995copulas,
+  author	= {Den Dikken, Marcel},
+  title		= {Copulas},
+  year		= {1995}
+}
+
+@Article{	  ueno2005note,
+  author	= {Ueno, Yoshio},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {155--160},
+  title		= {A Note on the Structure of Predicate Phrase + be +
+		  that-CP},
+  volume	= {36},
+  year		= {2005}
+}
+
+@Article{	  ljung1974some,
+  author	= {Ljung, Magnus},
+  journal	= {Language},
+  number	= {1},
+  pages		= {74},
+  title		= {Some Remarks on Antonymy},
+  volume	= {50},
+  year		= {1974}
+}
+
+@Article{	  vergnaud1992inalienable,
+  author	= {Vergnaud, Jean-Roger and Zubizarreta, Maria Luisa},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {595--652},
+  title		= {The Definite Determiner and the Inalienable Constructions
+		  in French and in English},
+  volume	= {23},
+  year		= {1992}
+}
+
+@Article{	  hallman2023superlative,
+  author	= {Hallman, Peter},
+  journal	= {Natural Language Semantics},
+  number	= {1},
+  pages		= {1--23},
+  title		= {Superlative displacement in `sandwich' scenarios},
+  volume	= {31},
+  year		= {2023}
+}
+
 @Article{	  fernandez2020dativ,
   author	= {Fern{\'a}ndez, Beatriz and Z{\'u}{\~n}iga, Fernando and
 		  Berro, Ane},
