--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,8 +1,28 @@
 
+@Article{	  onea2022nomin,
+  author	= {Onea, Edgar and Ott, Dennis},
+  journal	= {Language},
+  number	= {2},
+  pages		= {359--391},
+  title		= {Nominal appositives in grammar and discourse},
+  volume	= {98},
+  year		= {2022}
+}
+
+@Book{		  cinque2001current,
+  address	= {Oxford},
+  editor	= {Cinque, Gugliemo and Salvi, Giampolo},
+  pages		= {326},
+  publisher	= {Elsevier Science Ltd},
+  title		= {Current Studies in Italian Syntax: Essays Offered to
+		  Lorenzo Renzi},
+  year		= {2001}
+}
+
 @PhDThesis{	  stockwell2020ellipsis,
   author	= {Stockwell, Richard},
   school	= {UCLA},
-  title		= {ontrast and Verb Phrase Ellipsis: Triviality, Symmetry,
+  title		= {Contrast and Verb Phrase Ellipsis: Triviality, Symmetry,
 		  and Competition},
   year		= {2020}
 }
