--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  elliot2020clausal,
+  address	= {London},
+  author	= {Elliott, Patrick D.},
+  school	= {UCL},
+  title		= {Elements of clausal embedding},
+  year		= {2020}
+}
+
 @Article{	  onea2022nomin,
   author	= {Onea, Edgar and Ott, Dennis},
   journal	= {Language},
