--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Book{		  gundel2019reference,
+  editor	= {Gundel, Jeanette K. and Abbott, Barbara},
+  publisher	= {Oxford Handbooks},
+  title		= {The Oxford Handbook of Reference},
+  year		= {2019}
+}
+
 @PhDThesis{	  elliot2020clausal,
   address	= {London},
   author	= {Elliott, Patrick D.},
