--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,53 @@
 
+@Article{	  rumberg2023what,
+  author	= {Rumberg, Antje and Lauer, Sven},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {533--565},
+  title		= {What if, and when? Conditionals, tense, and branching
+		  time},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  biezma2023being,
+  author	= {Biezma, Mar{\'i}a and Goebel, Arno},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {567--626},
+  title		= {Being pragmatic about biscuits},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  blumberg2023attit,
+  author	= {Blumberg, Kyle and Goldstein, Simon},
+  journal	= {Linguistics and Philosophy},
+  number	= {3},
+  pages		= {483--507},
+  title		= {Attitude verbs' local context},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  landau1999psych,
+  author	= {Landau, Idan},
+  journal	= {The Linguistic Review},
+  number	= {4},
+  title		= {Psych-adjectives and semantic selection},
+  volume	= {16},
+  year		= {1999}
+}
+
+@InBook{	  cowper2010auxiliaries,
+  author	= {Cowper, Elizabeth},
+  booktitle	= {Proceedings of the 2020 annual conference of the Canadian
+		  Linguistic Association},
+  editor	= {Heijil, Melinda},
+  title		= {Where auxiliaries come from},
+  year		= {2010}
+}
+
 @Book{		  gundel2019reference,
   editor	= {Gundel, Jeanette K. and Abbott, Barbara},
   publisher	= {Oxford Handbooks},
