--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,76 @@
 
+@Book{		  pfau2009grammar,
+  author	= {Pfau, Roland},
+  pages		= {391},
+  publisher	= {John Benjamins Publishing},
+  title		= {Grammar as Processor: A Distributed Morphology Account of
+		  Spontaneous Speech Errors},
+  year		= {2009}
+}
+
+@Article{	  miyagawa1998sase,
+  author	= {Miyagawa, Shigeru},
+  journal	= {Journal of Japanese Linguistics},
+  number	= {1},
+  pages		= {67--110},
+  title		= {(S)ase as an Elsewhere Causative and The Syntactic Nature
+		  of Words},
+  volume	= {16},
+  year		= {1998}
+}
+
+@Article{	  harley1997logophor,
+  author	= {Harley, Heidi},
+  journal	= {Lingua},
+  number	= {2-3},
+  pages		= {75--84},
+  title		= {Logophors, variable binding and the interpretation of
+		  have},
+  volume	= {103},
+  year		= {1997}
+}
+
+@Article{	  pountain1985copulas,
+  author	= {Pountain, Christopher J.},
+  journal	= {Bulletin of Hispanic Studies},
+  number	= {4},
+  pages		= {337--355},
+  title		= {Copulas, Verbs of Possession and Auxiliaries in Old
+		  Spanish: The Evidence for Structurally Interdependent
+		  Changes},
+  volume	= {62},
+  year		= {1985}
+}
+
+@Article{	  wilkinson1974tense,
+  author	= {Wilkinson, Robert W.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {251--270},
+  title		= {Tense/Lax Vowel Harmony in Telugu: The Influence of
+		  Derived Contrast on Rule Application},
+  volume	= {5},
+  year		= {1974}
+}
+
+@Book{		  wood2015icelandic,
+  author	= {Wood, Jim},
+  pages		= {316},
+  publisher	= {Springer},
+  title		= {Icelandic Morphosyntax and Argument Structure},
+  year		= {2015}
+}
+
+@Book{		  levin1994unacc,
+  address	= {Cambridge, Mass.},
+  author	= {Levin, Beth and Rappaport Hovav, Malka},
+  pages		= {356},
+  publisher	= {MIT Press},
+  title		= {Unaccusativity: At the Syntax-Lexical Semantics
+		  Interface},
+  year		= {1994}
+}
+
 @Article{	  rumberg2023what,
   author	= {Rumberg, Antje and Lauer, Sven},
   journal	= {Linguistics and Philosophy},
