--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,94 @@
 
+@Article{	  zeijlstra2012there,
+  author	= {Zeijlstra, Hedde},
+  journal	= {The Linguistic Review},
+  number	= {3},
+  title		= {There is only one way to agree},
+  volume	= {29},
+  year		= {2012}
+}
+
+@Article{	  keine2023movem,
+  author	= {Keine, Stefan and Dash, Bhamati},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {679--732},
+  title		= {Movement and cyclic Agree},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  landau2023argum,
+  author	= {Landau, Idan},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {793--845},
+  title		= {Argument ellipsis as external merge after transfer},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  kandybowicz2023integ,
+  author	= {Kandybowicz, Jason and Nchare, Abdoulaye Laziz},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {655--677},
+  title		= {Integrated non-restrictive relative clauses in Shupamem},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  bhatt2023commo,
+  author	= {Bhatt, Rajesh and Nash, L{\'e}a},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {501--546},
+  title		= {The common core of relativization in Georgian},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  aristodemo2023natur,
+  author	= {Aristodemo, Valentina and Giustolisi, Beatrice and Zorzi,
+		  Giorgia and Gras, Doriane and Hauser, Charlotte and Sala,
+		  Rita and S{\'a}nchez Amat, Jordina and Donati, Caterina and
+		  Cecchetto, Carlo},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {2},
+  pages		= {459--500},
+  title		= {On the nature of role shift},
+  volume	= {41},
+  year		= {2023}
+}
+
+@Article{	  pesetsky1985morph,
+  author	= {Pesetsky, David},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {193--246},
+  title		= {Morphology and Logical Form},
+  volume	= {16},
+  year		= {1985}
+}
+
+@Book{		  acedo-matellan2016morph,
+  address	= {New York},
+  author	= {Acedo-Matell{\'a}n, V{\'i}ctor},
+  pages		= {0},
+  publisher	= {Oxford University Press},
+  title		= {The Morphosyntax of Transitions: A Case Study in Latin and
+		  Other Languages},
+  year		= {2016}
+}
+
+@Book{		  alexiadou2020nomin,
+  editor	= {Alexiadou, Artemis and Borer, Hagit},
+  pages		= {368},
+  publisher	= {Oxford University Press},
+  title		= {Nominalization: 50 Years on from Chomsky's Remarks},
+  year		= {2020}
+}
+
 @Book{		  pfau2009grammar,
   author	= {Pfau, Roland},
   pages		= {391},
