--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,247 @@
 
+@Book{		  prince2004optim,
+  address	= {New York/London},
+  author	= {Prince, Alan and Smolensky, Paul},
+  pages		= {304},
+  publisher	= {Wiley-Blackwell},
+  title		= {Optimality Theory: Constraint Interaction in Generative
+		  Grammar},
+  year		= {2004}
+}
+
+@Article{	  woolford1983bilin,
+  author	= {Woolford, Ellen},
+  journal	= {Linguistic Inquiry},
+  pages		= {520--536},
+  title		= {Bilingual Code-Switching and Syntactic Theory},
+  volume	= {1483)},
+  year		= {1983}
+}
+
+@Book{		  muysken2000bilingual,
+  address	= {Cambridge},
+  author	= {Muysken, Pieter},
+  pages		= {326},
+  publisher	= {Cambridge University Press},
+  title		= {Bilingual Speech: A Typology of Code-Mixing},
+  year		= {2000}
+}
+
+@Article{	  lopez2016questions,
+  author	= {L{\'o}pez, Luis},
+  journal	= {Bilingualism: Language and Cognition},
+  number	= {5},
+  pages		= {889--890},
+  title		= {Questions on data and the input to GEN},
+  volume	= {19},
+  year		= {2016}
+}
+
+@Article{	  goldrick2016coactivation,
+  author	= {Goldrick, Matthew and Putnam, Michael and Schwarz, Lara},
+  journal	= {Bilingualism: Language and Cognition},
+  number	= {5},
+  pages		= {857--876},
+  title		= {Coactivation in bilingual grammars: A computational
+		  account of code mixing},
+  volume	= {19},
+  year		= {2016}
+}
+
+@Book{		  goddard2014words,
+  address	= {Oxford},
+  author	= {Goddard, Cliff and Wierzbicka, Anna},
+  pages		= {323},
+  publisher	= {Oxford University Press},
+  title		= {Words and Meanings: Lexical Semantics Across Domains,
+		  Languages, and Cultures},
+  year		= {2014}
+}
+
+@Article{	  adger2017limit,
+  author	= {Adger, David},
+  journal	= {Behavioral Brain Science},
+  pages		= {18--19},
+  title		= {The limitations of structural priming are not the limits
+		  of linguistic theory.},
+  volume	= {40},
+  year		= {2017}
+}
+
+@Article{	  branigan2017experimental,
+  author	= {Branigan, Holly P. and Pickering, Martin J.},
+  journal	= {Behav Brain Sci},
+  pages		= {1--61},
+  title		= {An experimental approach to linguistic representation.},
+  volume	= {40},
+  year		= {2017}
+}
+
+@PhDThesis{	  wittenberg2016light,
+  address	= {Postsdam},
+  author	= {Wittenberg, Eva},
+  school	= {Universit{\"a}t Potsdam},
+  title		= {With Light Verb Constructions from Syntax to Concepts},
+  year		= {2016}
+}
+
+@Book{		  flynn1988linguistic,
+  address	= {Dordrecht},
+  editor	= {Flynn, Suzanne and O'Neil, Wayne},
+  publisher	= {Springer Netherlands},
+  title		= {Linguistic Theory in Second Language Acquisition},
+  year		= {1988}
+}
+
+@Book{		  white2003second,
+  author	= {White, Lydia},
+  publisher	= {Cambridge University Press},
+  title		= {Second Language Acquisition and Universal Grammar},
+  year		= {2003}
+}
+
+@Book{		  herschensohn2013second,
+  address	= {Cambridge},
+  editor	= {Herschensohn, Julia and Young-Scholten, Martha},
+  pages		= {840},
+  publisher	= {Cambridge University Press},
+  title		= {The Cambridge Handbook of Second Language Acquisition},
+  year		= {2013}
+}
+
+@Article{	  amaral2014multiple,
+  author	= {Amaral, Luiz and Roeper, Tom},
+  journal	= {Second Language Research},
+  number	= {1},
+  pages		= {3--36},
+  title		= {Multiple Grammars and Second Language Representation},
+  volume	= {30},
+  year		= {2014}
+}
+
+@Article{	  kroll2012psycholinguistics,
+  author	= {Kroll, Judith F. and Bogulski, Cari A. and McClain,
+		  Rhonda},
+  journal	= {Linguistic Approaches to Bilingualism},
+  number	= {1},
+  pages		= {1--24},
+  title		= {Psycholinguistic perspectives on second language learning
+		  and bilingualism},
+  volume	= {2},
+  year		= {2012}
+}
+
+@InBook{	  white2003interlanguage,
+  address	= {Oxford, UK},
+  author	= {White, Lydia},
+  booktitle	= {The Handbook of Second Language Acquisition},
+  editor	= {Doughty, Catherine J. and Long, Michael H.},
+  pages		= {18-42},
+  publisher	= {Blackwell Publishing Ltd},
+  title		= {On the Nature of Interlanguage Representation: Universal
+		  Grammar in the Second Language},
+  year		= {2003}
+}
+
+@Book{		  doughty2003handb,
+  address	= {Oxford, UK},
+  editor	= {Doughty, Catherine J. and Long, Michael H.},
+  publisher	= {Blackwell Publishing Ltd},
+  title		= {The Handbook of Second Language Acquisition},
+  year		= {2003}
+}
+
+@InBook{	  romaine2003variation,
+  address	= {Oxford, UK},
+  author	= {Romaine, Suzanne},
+  booktitle	= {The Handbook of Second Language Acquisition},
+  editor	= {Doughty, Catherine J. and Long, Michael H.},
+  pages		= {410-435},
+  publisher	= {Blackwell Publishing Ltd},
+  title		= {Variation},
+  year		= {2003}
+}
+
+@Article{	  roeper1999unive,
+  author	= {Roeper, Thomas},
+  journal	= {Bilingualism: Language and Cognition},
+  number	= {3},
+  pages		= {169--186},
+  title		= {Universal bilingualism},
+  volume	= {2},
+  year		= {1999}
+}
+
+@Article{	  white2011second,
+  author	= {White, Lydia},
+  journal	= {Lingua},
+  number	= {4},
+  pages		= {577--590},
+  title		= {Second language acquisition at the interfaces},
+  volume	= {121},
+  year		= {2011}
+}
+
+@Article{	  acquaviva2009roots,
+  author	= {Acquaviva, Paolo},
+  journal	= {ork Papers in Linguistics Series},
+  pages		= {1--21},
+  title		= {Roots and lexicality in Distributed Morphology},
+  volume	= {2},
+  year		= {2009}
+}
+
+@Article{	  arad2003denominal,
+  author	= {Arad, Maya},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {737--778},
+  title		= {Locality Constraints in the Interpretation of Roots: the
+		  Case of Hebew Denominal Roots},
+  volume	= {21},
+  year		= {2003}
+}
+
+@Article{	  schwartz1996cogni,
+  author	= {Schwartz, Bonnie D. and Sprouse, Rex A.},
+  journal	= {Second Language Research},
+  number	= {1},
+  pages		= {40--72},
+  title		= {L2 cognitive states and the Full Transfer/Full Access
+		  model},
+  volume	= {12},
+  year		= {1996}
+}
+
+@Article{	  gonzalez-vilbazo2012little,
+  author	= {Gonz{\'a}lez-Vilbazo, Kay and L{\'o}pez, Luis},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {33--77},
+  title		= {Little v and parametric variation},
+  volume	= {30},
+  year		= {2012}
+}
+
+@Article{	  gonzalez-vilbazo2011some,
+  author	= {Gonz{\'a}lez-Vilbazo, Kay and L{\'o}pez, Luis},
+  journal	= {Lingua},
+  number	= {5},
+  pages		= {832--850},
+  title		= {Some properties of light verbs in code-switching},
+  volume	= {121},
+  year		= {2011}
+}
+
+@Article{	  grimshaw1997extended,
+  author	= {Grimshaw, Jane},
+  journal	= {Linguistic Inquiry},
+  pages		= {373--422},
+  title		= {Projection, Heads, and Optimality},
+  volume	= {28, No. 3},
+  year		= {1997}
+}
+
 @Article{	  zeijlstra2012there,
   author	= {Zeijlstra, Hedde},
   journal	= {The Linguistic Review},
