--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  rigau1995temporal,
+  author	= {Rigau, Gemma},
+  journal	= {Probus},
+  number	= {3},
+  title		= {The properties of the temporal Infinitive constructions in
+		  Catalan and Spanish},
+  volume	= {7},
+  year		= {1995}
+}
+
 @Book{		  prince2004optim,
   address	= {New York/London},
   author	= {Prince, Alan and Smolensky, Paul},
