--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  rigau1991agr,
+  author	= {Rigau, Gemma},
+  journal	= {Catalan Working Papers in Linguistics},
+  pages		= {235--260},
+  title		= {On the functional properties of AGR},
+  year		= {1991}
+}
+
 @Article{	  rigau1995temporal,
   author	= {Rigau, Gemma},
   journal	= {Probus},
