--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,34 @@
 
+@Article{	  boskovic2003nullcomp,
+  author	= {Bo{\v s}kovi{\'c}, {\v Z}eljko and Lasnik, Howard},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {527--546},
+  title		= {On the Distribution of Null Complementizers},
+  volume	= {34},
+  year		= {2003}
+}
+
+@Article{	  martin2001null,
+  author	= {Martin, Roger},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {141--166},
+  title		= {Null Case and the Distribution of PRO},
+  volume	= {32},
+  year		= {2001}
+}
+
+@Article{	  cecchetto2004chall,
+  author	= {Cecchetto, Carlo and Oniga, Renato},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {141--149},
+  title		= {A Challenge to Null Case Theory},
+  volume	= {35},
+  year		= {2004}
+}
+
 @Article{	  rigau1991agr,
   author	= {Rigau, Gemma},
   journal	= {Catalan Working Papers in Linguistics},
