--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,65 @@
 
+@Book{		  martinez2016gramatica,
+  address	= {Huelva},
+  editor	= {Mart{\'i}nez V{\'a}zquez, Monserrat},
+  publisher	= {Universidad de Huelva},
+  title		= {Gram{\'a}tica Contrastiva: Ingl{\'e}s-Espa{\~n}ol},
+  year		= {2016}
+}
+
+@Book{		  araya2013espanol,
+  author	= {Araya, Eric},
+  publisher	= {CreateSpace Independent Publishing Platform},
+  title		= {Espa{\~n}ol e ingl{\'e}s: gram{\'a}tica contrastiva},
+  year		= {2013}
+}
+
+@Book{		  rodriguez2003traduccion,
+  address	= {Las Palmas de Gran Canaria},
+  author	= {Rodr{\'i}guez Medina, Mar{\'i}a Jes{\'u}s},
+  publisher	= {Universidad de Las Palmas de Gran Canaria},
+  title		= {La traducci{\'o}n de la morfosintaxis
+		  (ingl{\'e}s-espa{\~n}ol)},
+  year		= {2003}
+}
+
+@Book{		  jimenez2021orden,
+  address	= {Madrid},
+  author	= {Fern{\'a}ndez Jim{\'e}nez, {\'A}ngel},
+  publisher	= {Arco Libros},
+  title		= {Ense{\~n}anza de la estructura informativa en ELE:
+		  estrategias para estudiantes angl{\'o}fonos},
+  year		= {2021}
+}
+
+@Book{		  cruz2009english,
+  address	= {Alcal{\'a} de Henares},
+  author	= {de la Cruz Cabanillas, Isabel},
+  publisher	= {Universidad de Alcal{\'a}},
+  title		= {English and Spanish in Contrast},
+  year		= {2009}
+}
+
+@Article{	  peterson2017probl,
+  author	= {Peterson, Tyler},
+  journal	= {Review of Cognitive Linguistics},
+  number	= {2},
+  pages		= {312--342},
+  title		= {Problematizing mirativity},
+  volume	= {15},
+  year		= {2017}
+}
+
+@Article{	  serrano-losada2017raisi,
+  author	= {Serrano-Losada, Mario},
+  journal	= {Review of Cognitive Linguistics},
+  number	= {2},
+  pages		= {411--437},
+  title		= {Raising turn out in Late Modern English},
+  volume	= {15},
+  year		= {2017}
+}
+
 @Article{	  boskovic2003nullcomp,
   author	= {Bo{\v s}kovi{\'c}, {\v Z}eljko and Lasnik, Howard},
   journal	= {Linguistic Inquiry},
