--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,57 @@
 
+@Book{		  borsley2011non-transformational,
+  editor	= {Borsley, Robert and B{\"o}rjars, Kersti},
+  publisher	= {Wiley-Blackwell},
+  title		= {Non-Transformational Syntax: Formal and Explicit Models of
+		  Grammar},
+  year		= {2011}
+}
+
+@Article{	  momma2023plann,
+  author	= {Momma, Shota and Yoshida, Masaya},
+  journal	= {Language, Cognition and Neuroscience},
+  pages		= {1--31},
+  title		= {Planning multiple dependencies in sentence production},
+  year		= {2023}
+}
+
+@Book{		  cinque2023linea,
+  author	= {Cinque, Guglielmo},
+  pages		= {221},
+  publisher	= {MIT Press},
+  title		= {On Linearization: Toward a Restrictive Theory},
+  year		= {2023}
+}
+
+@Article{	  chomsky2023genuine,
+  author	= {Chomsky, Noam},
+  journal	= {Cognitive Semantics},
+  number	= {3},
+  pages		= {347--365},
+  title		= {Genuine Explanation and the Strong Minimalist Thesis},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Article{	  chomsky2021simplicity,
+  author	= {Chomsky, Noam},
+  journal	= {Journal of Language Modelling},
+  number	= {1},
+  pages		= {5--15},
+  title		= {Simplicity and the form of grammars},
+  volume	= {9},
+  year		= {2021}
+}
+
+@Article{	  marcolli2023mathematical,
+  author	= {Marcolli, Matilde and Chomsky, Noam and Berwick, Robert},
+  journal	= {arXiv},
+  pages		= {cs.CL},
+  title		= {Mathematical Structure of Syntactic Merge},
+  volume	= {2305.18278},
+  year		= {2023}
+}
+
 @Book{		  martinez2016gramatica,
   address	= {Huelva},
   editor	= {Mart{\'i}nez V{\'a}zquez, Monserrat},
