--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  perez2023inclusive,
+  author	= {Mu{\~n}oz P{\'e}rez, Carlos},
+  journal	= {Borealis: An International Journal of Hispanic
+		  Linguistics},
+  number	= {1},
+  title		= {A cautionary comment on the morphological status of
+		  inclusive --e in Spanish},
+  volume	= {12},
+  year		= {2023}
+}
+
+@Article{	  fabregas2023in,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {ELUA},
+  pages		= {45--62},
+  title		= {In- como operador escalar y su comportamiento adjetival},
+  volume	= {39},
+  year		= {2023}
+}
+
+@Article{	  kang1993unhap,
+  author	= {Kang, Beom-mo},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {788--794},
+  title		= {Unhappier Is Really a Bracketing Paradox},
+  volume	= {24},
+  year		= {1993}
+}
+
+@Article{	  collins2023negating,
+  author	= {Collins, Chris},
+  journal	= {Natural Language Semantics},
+  title		= {Negating gradable adjectives},
+  year		= {2023}
+}
+
 @Book{		  borsley2011non-transformational,
   editor	= {Borsley, Robert and B{\"o}rjars, Kersti},
   publisher	= {Wiley-Blackwell},
