--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,116 @@
 
+@Book{		  rezac2010phi,
+  address	= {Dordrecht},
+  author	= {Rezac, Milan},
+  pages		= {326},
+  publisher	= {Springer},
+  title		= {Phi-features and the Modular Architecture of Language},
+  year		= {2010}
+}
+
+@Article{	  berro2019appli,
+  author	= {Berro, Ane and Fern{\'a}ndez, Beatriz},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {4},
+  pages		= {1273--1317},
+  title		= {Applicatives without verbs},
+  volume	= {37},
+  year		= {2019}
+}
+
+@Article{	  jerro2023seman,
+  author	= {Jerro, Kyle},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {The semantics of applicativization in Kinyarwanda},
+  year		= {2023}
+}
+
+@Article{	  fisher2022adjunct,
+  author	= {Fischer, Silke and H{\o}yem, Inghild Flaate},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {1},
+  pages		= {1--41},
+  title		= {Adjunct control in German, Norwegian, and English},
+  volume	= {25},
+  year		= {2022}
+}
+
+@Article{	  eid1983copula,
+  author	= {Eid, Mushira},
+  journal	= {Lingua},
+  number	= {2-3},
+  pages		= {197--207},
+  title		= {The copula function of pronouns},
+  volume	= {59},
+  year		= {1983}
+}
+
+@Article{	  brodahl2022being,
+  author	= {Brodahl, Kristin Klubbo},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {3},
+  pages		= {273--331},
+  title		= {Being as big as small clauses get: the syntax of
+		  participial adjuncts in German and English},
+  volume	= {25},
+  year		= {2022}
+}
+
+@Article{	  sprouse2011test,
+  author	= {Sprouse, Jon},
+  journal	= {Language},
+  number	= {2},
+  pages		= {274--288},
+  title		= {A Test of the Cognitive Assumptions of Magnitude
+		  Estimation: Commutativity does not Hold for Acceptability
+		  Judgments},
+  volume	= {87},
+  year		= {2011}
+}
+
+@Article{	  fanselow2011infor,
+  author	= {Fanselow, Gisbert and Weskott, Thomas},
+  journal	= {Language},
+  number	= {2},
+  pages		= {249--273},
+  title		= {On The Informativity Of Different Measures Of Linguistic
+		  Acceptability},
+  volume	= {87},
+  year		= {2011}
+}
+
+@Article{	  siegel1994such,
+  author	= {Siegel, Muffy E. A.},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {481--497},
+  title		= {Such: Binding and the Pro-Adjective},
+  volume	= {17},
+  year		= {1994}
+}
+
+@Article{	  oehrle1979tough,
+  author	= {Oehrle, Richard T.},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {583--593},
+  title		= {A Theoretical Consequence of Constituent Structure in
+		  Tough Movement},
+  volume	= {10},
+  year		= {1979}
+}
+
+@InBook{	  rezac2006tough,
+  address	= {Amsterdam},
+  author	= {Rezac, Milan},
+  booktitle	= {Minimalist Essays},
+  editor	= {Boeckx, Cedric},
+  pages		= {288-306},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {On tough-movement},
+  year		= {2006}
+}
+
 @Article{	  perez2023inclusive,
   author	= {Mu{\~n}oz P{\'e}rez, Carlos},
   journal	= {Borealis: An International Journal of Hispanic
