--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  smith2022agentless,
+  author	= {Smith, Ryan Walter and Yu, Jianrong},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {3},
+  pages		= {875--909},
+  title		= {Agentless presuppositions and the semantics of verbal
+		  roots},
+  volume	= {40},
+  year		= {2022}
+}
+
 @Book{		  rezac2010phi,
   address	= {Dordrecht},
   author	= {Rezac, Milan},
