--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  lobner2011concept,
+  author	= {L{\"o}bner, Sebastian},
+  journal	= {Journal of Semantics},
+  number	= {3},
+  pages		= {279--333},
+  title		= {Concept Types and Determination},
+  volume	= {28},
+  year		= {2011}
+}
+
+@Article{	  acquaviva2022word,
+  author	= {Acquaviva, Paolo},
+  journal	= {Synthese},
+  number	= {5},
+  title		= {Word meaning: a linguistic dimension of
+		  conceptualization},
+  volume	= {200},
+  year		= {2022}
+}
+
 @Article{	  smith2022agentless,
   author	= {Smith, Ryan Walter and Yu, Jianrong},
   journal	= {Natural Language and Linguistic Theory},
