--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,68 @@
 
+@Article{	  abels2023sluicing,
+  author	= {Abels, Klaus and Dayal, Veneeta},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {429--477},
+  title		= {On the Syntax of Multiple Sluicing and What It Tells Us
+		  about Wh-Scope Taking},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  dikken2023applicative,
+  author	= {den Dikken, Marcel},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {479--503},
+  title		= {High and Low Applicatives of Unaccusatives: Dependent Case
+		  and the Phase},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  dolatian2023allomorphy,
+  author	= {Dolatian, Hossep and Guekguezian, Peter},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {505--545},
+  title		= {Relativized Locality: Phases and Tiers in Long-Distance
+		  Allomorphy in Armenian},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  ganenkov2023shift,
+  author	= {Ganenkov, Dmitry},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {547--570},
+  title		= {Agreement Shift in Embedded Reports},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  hengeveld2023quexistential,
+  author	= {Hengeveld, Kees and Iatridou, Sabine and Roelofsen,
+		  Floris},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {571--624},
+  title		= {Quexistentials and Focus},
+  volume	= {54},
+  year		= {2023}
+}
+
+@Article{	  kiss2023pp,
+  author	= {Kiss, Katalin {\'E}.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {625--648},
+  title		= {Definiteness Effect in the PP},
+  volume	= {54},
+  year		= {2023}
+}
+
 @Article{	  lobner2011concept,
   author	= {L{\"o}bner, Sebastian},
   journal	= {Journal of Semantics},
